--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
+    "csvtojson": "^2.0.3",
     "express": "^4.16.3",
     "node": "^10.3.0",
     "nodemon": "^1.17.5"
