--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/matisapatta/TPFinalSimulacion#readme",
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "bower": "^1.8.4",
     "cors": "^2.8.4",
     "jquery": "^3.3.1",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "plotly": "^1.0.6",
+    "rangeslider.js": "^2.3.2"
   }
 }
