--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bower": "^1.8.4",
     "cors": "^2.8.4",
     "d3": "^5.4.0",
+    "dygraphs": "^2.1.0",
     "jquery": "^3.3.1",
+    "metrics-graphics": "^2.15.6",
     "nodemon": "^1.17.5",
     "plotly": "^1.0.6",
     "rangeslider.js": "^2.3.2"
